finished list component and fixed bugs with spacing

--- a/src/global.css
+++ b/src/global.css
@@ -12,7 +12,3 @@
     font-weight: normal;
     font-style: normal;
 }
-
-main{
-    height: 100vh;
-}
